# StatisticsOfElectronicHoles

./: README.md
Final App/Mac/StatisticsOfElectronicHoles.app/Contents/: Info.plist
Final App/Mac/StatisticsOfElectronicHoles.app/Contents/Frameworks/QtQmlModels.framework/Versions/5/: QtQmlModels
Final App/Mac/StatisticsOfElectronicHoles.app/Contents/Frameworks/QtVirtualKeyboard.framework/Versions/5/: QtVirtualKeyboard
Final App/Windows/: StatisticsOfElectronicHoles.lnk
Final App/Windows/Core/: qt.conf
QT Part/: CMakeLists.txt  CMakeLists.txt.user.149a368  Icons.qrc  adapterforvectozavr.cpp  adapterforvectozavr.h  application.cpp  application.h  application.ui  graphics.qrc  imagelabel.h  information.cpp  information.h  information.ui  qcpdocumentobject.h  savewindow.cpp  savewindow.h  savewindow.ui
QT Part/build-StatisticsOfElectronicHoles-Desktop_Qt_5_15_2_clang_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  StatisticsOfElectronicHoles  build.ninja  cmake_install.cmake
QT Part/build-StatisticsOfElectronicHoles-Desktop_Qt_5_15_2_clang_64bit-Debug/.cmake/api/v1/reply/: cache-v2-955ebfc59823834b2dab.json  cmakeFiles-v1-c58c2b9a3605e6839e5d.json  codemodel-v2-2f8cbcb5f80eda2a95ce.json  index-2020-11-25T15-55-25-0042.json  target-StatisticsOfElectronicHoles-Debug-93c4f8570ef8b77d89c0.json  target-StatisticsOfElectronicHoles_autogen-Debug-de554fe2da613a3a69c7.json  target-StatisticsOfElectronicHoles_autogen_timestamp_deps-Debug-4066a7978f213e80d6cc.json
SiliconCore/: CMakeLists.txt  FermiDirac.cpp  FermiDirac.h  Silicon.cpp  Silicon.h  main.cpp  statisticsInSilicon.cpp  vemath.cpp  vemath.h
build-StatisticsOfElectronicHoles-Desktop_Qt_5_15_2_clang_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja
build-StatisticsOfElectronicHoles-Desktop_Qt_5_15_2_clang_64bit-Debug/.cmake/api/v1/reply/: cache-v2-dae8f2bea3700e22dcb8.json  cmakeFiles-v1-6f4645defc3807123575.json  codemodel-v2-2e887cc6f04830efd68f.json  index-2020-11-24T16-44-57-0068.json  target-StatisticsOfElectronicHoles-Debug-eadbad6de85739b81cce.json
build-StatisticsOfElectronicHoles-Desktop_Qt_5_15_2_clang_64bit-Debug/StatisticsOfElectronicHoles_autogen/: deps  moc_predefs.h
build-StatisticsOfElectronicHoles-Desktop_Qt_5_15_2_clang_64bit-Debug/StatisticsOfElectronicHoles_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
